# TALKER-Live

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  export_voices.bat  generate_silent_slots.py  launch_mic.bat  launch_talker_bridge.bat  launch_talker_service.bat  mcp_lua_test_runner.py  setup.bat  test_bridge_config_issue.py
native/: CMakeLists.txt  talker_audio.c  vcpkg.json
talker_service/: .env.example  mcp_test_runner.py  pyproject.toml  requirements.txt  run.py
talker_service/src/talker_service/: __init__.py  __main__.py  config.py
talker_service/src/talker_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
talker_service/src/talker_service/auth/: __init__.py  factory.py  keycloak.py
talker_service/src/talker_service/dialogue/: __init__.py  background_generator.py  cleaner.py  context_block.py  conversation.py  dedup_tracker.py  event_list.py  generator.py  retry_queue.py  speaker.py
talker_service/src/talker_service/handlers/: __init__.py  _log.py  audio.py  config.py  events.py
talker_service/src/talker_service/llm/: __init__.py  base.py  factory.py  models.py  ollama_client.py  openai_client.py  openrouter_client.py  proxy_client.py  pruning.py  token_utils.py
talker_service/src/talker_service/memory/: __init__.py  compaction.py  scheduler.py
talker_service/src/talker_service/models/: __init__.py  (+2 more)
talker_service/tests/: __init__.py  conftest.py  test_audio_buffer.py  test_audio_handlers.py  test_background_generator.py  test_batch_query.py  test_bridge_config.py  test_bridge_lua_closure.py  test_compaction.py  test_config_mirror.py  test_config_session_sync.py  test_context_block.py  test_conversation.py  test_dedup_tracker.py  test_dialogue.py  test_event_handler.py  test_event_list.py  test_factions_dynamic.py  test_generator_retry.py  test_keycloak_auth.py  test_llm_clients.py  test_locations.py  test_log_prefix.py  test_lookup.py  test_multi_session.py  test_outbox.py  test_prompts.py  test_pruning.py  test_retrieval.py  test_retry_queue.py  test_router.py  test_scene_context_factions.py  test_scheduler.py  test_session_registry.py  test_session_sync_service.py  test_settings_pins.py  test_shared_auth_integration.py  test_shared_http_client_factory.py  test_state_client.py  test_storage_foundation.py  (+9 more)
talker_service/tests/e2e/: assertions.py  conftest.py  harness.py  lua_simulator.py  mock_websocket.py  scenario_loader.py  schema_compiler.py  test_long_conversation.py  test_scenarios.py  test_schema_compiler.py  test_ws_api_contract.py  test_zmq_api_contract.py
talker_service/tests/integration/: __init__.py  conftest.py  test_anomaly_lifecycle.py  test_artifact_lifecycle.py  test_callout_lifecycle.py  test_death_lifecycle.py  test_dialogue_lifecycle.py  test_dialogue_tts.py  test_emission_lifecycle.py  test_event_lifecycle.py  test_idle_lifecycle.py  test_injury_lifecycle.py  test_map_transition_lifecycle.py  test_reload_lifecycle.py  test_sleep_lifecycle.py  test_speaker_workflow.py  test_task_lifecycle.py  test_taunt_lifecycle.py  test_weapon_jam_lifecycle.py
talker_service/texts/: __init__.py  anomaly_sections.py  locations.py
talker_service/texts/backstory/: __init__.py  army.py  bandit.py  clearsky.py  duty.py  ecolog.py  freedom.py  generic.py  isg.py  mercenary.py  monolith.py  renegade.py  sin.py  unique.py
talker_service/texts/characters/: __init__.py  important.py
talker_service/texts/personality/: __init__.py  bandit.py  ecolog.py  generic.py  monolith.py  renegade.py  sin.py  unique.py  zombied.py
talker_service/voices/: greh_3.safetensors  monolith_1.safetensors  woman.safetensors
(+804 files in other folders)
